--- a/Foresome/Foresome/SupportingFiles/Info.plist
+++ b/Foresome/Foresome/SupportingFiles/Info.plist
@@ -56,5 +56,7 @@
 	</dict>
 	<key>UIStatusBarStyle</key>
 	<string>No</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>allow Photo</string>
 </dict>
 </plist>
