--- a/Foresome/Foresome/SupportingFiles/Info.plist
+++ b/Foresome/Foresome/SupportingFiles/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Foresome wants use camera </string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Foresome wants to use photolibrary</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
