--- a/Foresome/Foresome/SupportingFiles/Info.plist
+++ b/Foresome/Foresome/SupportingFiles/Info.plist
@@ -20,6 +20,25 @@
 	<string>Always Use</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Location Needed</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.770518099190-a646ded4r3ud8u7uteqj2lgvllrqnus8</string>
+            </array>
+        </dict>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb2190812197728066</string>
+            </array>
+        </dict>
+    </array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-ExtraLight.ttf</string>
