--- a/Foresome/Podfile
+++ b/Foresome/Podfile
@@ -18,6 +18,7 @@ target 'Foresome' do
   pod 'SquareInAppPaymentsSDK'
   pod 'GoogleSignIn'
   pod 'Firebase/Storage'
+  pod 'ImageViewer.swift', '~> 3.0'
   
 end
 # Disable signing for pods
